--- a/QTS_Project (1).ipynb
+++ b/QTS_Project (1).ipynb
@@ -838,6 +838,40 @@
     "\n",
     "'''"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SQL Query for SOL\n",
+    "'''\n",
+    "SELECT \n",
+    "  DATE_TRUNC('hour', time) AS hour,\n",
+    "  AVG(height) AS average_height, AVG(total_transactions) AS average_total_transactions, \n",
+    "  AVG(successful_transactions) as average_successful_transactions, AVG(failed_transactions) as average_failed_transactions,\n",
+    "  AVG(total_vote_transactions) AS average_total_vote_transactions, AVG(total_non_vote_transactions) AS average_total_non_vote_transactions, \n",
+    "  AVG(successful_vote_transactions) AS average_successful_vote_transactions, AVG(successful_non_vote_transactions) AS average_successful_non_vote_transactions, \n",
+    "  AVG(failed_vote_transactions) AS average_failed_vote_transactions, AVG(failed_non_vote_transactions) AS average_failed_non_vote_transactions, \n",
+    "  AVG(num_reward_partitions) AS average_num_reward_partitions  \n",
+    "FROM solana.blocks\n",
+    "WHERE time >= TIMESTAMP '2015-01-01 00:00:00' \n",
+    "  AND time < TIMESTAMP '2025-02-24 00:00:00'\n",
+    "GROUP BY DATE_TRUNC('hour', time);\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sol_query_id = None # Replace with actual\n",
+    "query_result_SOL = dune.get_latest_result_dataframe(sol_query_id).sort_values('time')\n",
+    "query_result_SOL"
+   ]
   }
  ],
  "metadata": {
