--- a/QTS_Draft_Notebook.ipynb
+++ b/QTS_Draft_Notebook.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 1.) Motivation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Why on-chain data?\n",
     "\n",
     "On-chain data contains information acquired from the\n",
@@ -49,7 +56,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "OBTAINING THE DATA:\n",
+    "***\n",
+    "\n",
+    "# 2.) Obtaining the Data:\n",
     "\n",
     "*Dune API*\n",
     "\n",
@@ -391,7 +400,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "DATA CLEANING"
+    "***\n",
+    "\n",
+    "# 3.) Data Cleaning"
    ]
   },
   {
@@ -487,7 +498,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "BITCOIN CLEANING"
+    "### BITCOIN CLEANING"
    ]
   },
   {
@@ -1333,6 +1344,20 @@
     "num_missing_hours_price = len(check_missing_hours(btc_price_processed))\n",
     "print(f'Number of missing hours in the processed BTC price data: {num_missing_hours_price}')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "\n",
+    "# 4.) Charts & Preliminary Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
