--- a/QTS_Draft_Notebook.ipynb
+++ b/QTS_Draft_Notebook.ipynb
@@ -4,6 +4,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 0.) Contributors\n",
+    "\n",
+    "Togay Atmaca – 12268957​\n",
+    "\n",
+    "Jordan Cassella – 12452926​\n",
+    "\n",
+    "Matthew Haimes – 12452937​\n",
+    "\n",
+    "Kunj Shah – 12258505​\n",
+    "\n",
+    "Yan Song Zhao – 12448802\n",
+    "\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 1.) Motivation"
    ]
   },
