--- a/QTS_Draft_Notebook.ipynb
+++ b/QTS_Draft_Notebook.ipynb
@@ -50,7 +50,7 @@
     "\n",
     "Since the price moves in an unexpected range that has been previously unseen, constructed\n",
     "machine learning-based models are not able to predict future\n",
-    "prices accurately. This problem does not apply only to cer-\n",
+    "spot prices accurately. This problem does not apply only to cer-\n",
     "tain prediction algorithms but could affect practically every\n",
     "prediction model constructed based on price data within a\n",
     "moderate range. This work therefore proposes a novel method\n",
