--- a/QTS_Draft_Notebook.ipynb
+++ b/QTS_Draft_Notebook.ipynb
@@ -96,6 +96,23 @@
    ]
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "*Coin API*\n",
+    "\n",
+    "To get the API key:\n",
+    "1. Create an account on coinaip.io\n",
+    "2. In the left glossary, click on API Keys\n",
+    "3. Click create new key, and toggle all endpoints\n",
+    "4. Be sure to copy the API key immediately because it won't be shown again\n",
+    "\n",
+    "To pull data into a dataframe:\n",
+    "1. Input your apikey into a .env file\n",
+    "2. Utilize the functions below to pull hourly crypto data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -412,8 +429,250 @@
     "hourly_BTC_id = 4776487\n",
     "query_result_BTC_hourly = dune.get_latest_result_dataframe(hourly_BTC_id)\n",
     "query_result_BTC_hourly.to_parquet('query_result_BTC.parquet')\n",
-    "query_result_BTC_hourly "
+    "query_result_BTC_hourly"
    ]
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-01T21:49:30.863511Z",
+     "start_time": "2025-03-01T21:49:30.849670Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import requests\n",
+    "import pandas as pd\n",
+    "import time\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "\n",
+    "import os\n",
+    "load_dotenv()\n",
+    "# Your CoinAPI API Key\n",
+    "API_KEY= os.getenv(\"coinapi\")\n",
+    "def get_crypto_data(\n",
+    "    crypto=\"BTC\",\n",
+    "    quote_currency=\"USDT\",\n",
+    "    exchange=\"BINANCE\",\n",
+    "    start_date=\"2019-02-25T00:00:00\",\n",
+    "    end_date=\"2025-02-25T00:00:00\",\n",
+    "    period_id=\"1DAY\"\n",
+    "):\n",
+    "    \"\"\"\n",
+    "    Fetch cryptocurrency historical OHLCV data from CoinAPI.\n",
+    "\n",
+    "    Parameters:\n",
+    "    -----------\n",
+    "    crypto : str\n",
+    "        The cryptocurrency symbol (e.g., 'BTC', 'ETH', 'SOL')\n",
+    "    quote_currency : str\n",
+    "        The quote currency (e.g., 'USDT', 'USD', 'BUSD')\n",
+    "    exchange : str\n",
+    "        The exchange to fetch data from (e.g., 'BINANCE', 'COINBASE', 'KRAKEN')\n",
+    "    start_date : str\n",
+    "        Start date in ISO format (YYYY-MM-DDTHH:MM:SS)\n",
+    "    end_date : str\n",
+    "        End date in ISO format (YYYY-MM-DDTHH:MM:SS)\n",
+    "    period_id : str\n",
+    "        Time period of the candles (e.g., '1DAY', '1HRS', '15MIN')\n",
+    "\n",
+    "    Returns:\n",
+    "    --------\n",
+    "    pandas.DataFrame or None\n",
+    "        DataFrame containing the OHLCV data, or None if data retrieval failed\n",
+    "    \"\"\"\n",
+    "    # Construct the symbol ID based on the parameters\n",
+    "    symbol = f\"{exchange}_SPOT_{crypto}_{quote_currency}\"\n",
+    "\n",
+    "    url = f\"https://rest.coinapi.io/v1/ohlcv/{symbol}/history\"\n",
+    "    headers = {\"X-CoinAPI-Key\": API_KEY}\n",
+    "\n",
+    "\n",
+    "    params = {\n",
+    "        \"period_id\": period_id,\n",
+    "        \"time_start\": start_date,\n",
+    "        \"time_end\": end_date,\n",
+    "        \"limit\": 10000  # Max records per request\n",
+    "    }\n",
+    "\n",
+    "    all_data = []\n",
+    "    max_retries = 5\n",
+    "\n",
+    "    # print(f\"Fetching {crypto}/{quote_currency} data from {exchange} with {period_id} candles\")\n",
+    "    # print(f\"Symbol ID: {symbol}\")\n",
+    "    # print(f\"Date range: {start_date} to {end_date}\")\n",
+    "\n",
+    "    while True:\n",
+    "        retry_count = 0\n",
+    "        response = None\n",
+    "\n",
+    "        # Retry loop for handling rate limits\n",
+    "        while retry_count < max_retries:\n",
+    "            response = requests.get(url, headers=headers, params=params)\n",
+    "\n",
+    "            # If we get a rate limit error (429)\n",
+    "            if response.status_code == 429:\n",
+    "                # Try to get the retry-after value\n",
+    "                retry_after = 15  # Default to 15 seconds\n",
+    "\n",
+    "                try:\n",
+    "                    # Try to parse JSON response for retry-after info\n",
+    "                    error_data = response.json()\n",
+    "                    if \"Retry-After\" in error_data:\n",
+    "                        retry_after = int(error_data[\"Retry-After\"])\n",
+    "                except:\n",
+    "                    # If can't parse JSON, try to get from headers\n",
+    "                    if \"Retry-After\" in response.headers:\n",
+    "                        retry_after = int(response.headers[\"Retry-After\"])\n",
+    "\n",
+    "                # print(f\"Rate limit hit. Waiting {retry_after} seconds before retrying...\")\n",
+    "                time.sleep(retry_after + 1)  # Add 1 second buffer\n",
+    "                retry_count += 1\n",
+    "                continue\n",
+    "\n",
+    "            # If we get any other error or success, break out of retry loop\n",
+    "            break\n",
+    "\n",
+    "        # If we've exhausted our retries and still have rate limit issue\n",
+    "        if retry_count >= max_retries and response.status_code == 429:\n",
+    "            # print(f\"Still hitting rate limits after {max_retries} retries. Aborting.\")\n",
+    "            break\n",
+    "\n",
+    "        # Regular error handling\n",
+    "        if response.status_code != 200:\n",
+    "            print(f\"Error: Status code {response.status_code}\")\n",
+    "            print(f\"Response: {response.text}\")\n",
+    "\n",
+    "            # If symbol not found, try alternative quote currencies\n",
+    "            if response.status_code == 404 or (response.text and \"invalid or does not exist\" in response.text):\n",
+    "                return None\n",
+    "            break\n",
+    "\n",
+    "        # JSON parsing\n",
+    "        try:\n",
+    "            if response.text:\n",
+    "                data = response.json()\n",
+    "            else:\n",
+    "                print(\"Empty response received\")\n",
+    "                break\n",
+    "        except Exception as e:\n",
+    "            print(f\"JSON parsing error: {e}\")\n",
+    "            print(f\"Response content: {response.text[:200]}...\")\n",
+    "            break\n",
+    "\n",
+    "        # API error checking\n",
+    "        if isinstance(data, dict) and \"error\" in data:\n",
+    "            print(\"Error:\", data[\"error\"])\n",
+    "            break\n",
+    "\n",
+    "        # Empty data check\n",
+    "        if not data:\n",
+    "            print(\"No more data available\")\n",
+    "            break\n",
+    "\n",
+    "        # Successfully got data\n",
+    "        df = pd.DataFrame(data)\n",
+    "        all_data.append(df)\n",
+    "\n",
+    "        print(f\"Retrieved {len(df)} records\")\n",
+    "\n",
+    "        # Update for next batch\n",
+    "        if len(df) > 0:\n",
+    "            last_timestamp = df[\"time_period_end\"].iloc[-1]\n",
+    "            params[\"time_start\"] = last_timestamp\n",
+    "            # Wait between successful requests too, to avoid hitting limits\n",
+    "            time.sleep(5)\n",
+    "        else:\n",
+    "            break\n",
+    "\n",
+    "    # Process results\n",
+    "    if all_data:\n",
+    "        full_df = pd.concat(all_data, ignore_index=True)\n",
+    "        full_df[\"time_period_start\"] = pd.to_datetime(full_df[\"time_period_start\"])\n",
+    "        full_df.set_index(\"time_period_start\", inplace=True)\n",
+    "        return full_df\n",
+    "    else:\n",
+    "        return None\n",
+    "\n",
+    "\n",
+    "def fetch_with_fallbacks(\n",
+    "        crypto=\"BTC\",\n",
+    "        start_date=\"2019-02-25T00:00:00\",\n",
+    "        end_date=\"2025-02-25T00:00:00\",\n",
+    "        period_id=\"1DAY\"\n",
+    "):\n",
+    "\n",
+    "    # Try different quote currencies on Binance first\n",
+    "    quote_currencies = [\"USDT\", \"USD\", \"BUSD\"]\n",
+    "    for quote in quote_currencies:\n",
+    "        df = get_crypto_data(\n",
+    "            crypto=crypto,\n",
+    "            quote_currency=quote,\n",
+    "            exchange=\"BINANCE\",\n",
+    "            start_date=start_date,\n",
+    "            end_date=end_date,\n",
+    "            period_id=period_id\n",
+    "        )\n",
+    "\n",
+    "        if df is not None and not df.empty:\n",
+    "            print(f\"Success with {crypto}/{quote} on BINANCE!\")\n",
+    "            print(f\"Total records: {len(df)}\")\n",
+    "            print(f\"Date range: {df.index.min()} to {df.index.max()}\")\n",
+    "            return df\n",
+    "\n",
+    "    # If Binance failed, try other major exchanges\n",
+    "    exchanges = [\"COINBASE\", \"KRAKEN\", \"BITSTAMP\", \"KUCOIN\"]\n",
+    "    for exchange in exchanges:\n",
+    "        for quote in quote_currencies:\n",
+    "            df = get_crypto_data(\n",
+    "                crypto=crypto,\n",
+    "                quote_currency=quote,\n",
+    "                exchange=exchange,\n",
+    "                start_date=start_date,\n",
+    "                end_date=end_date,\n",
+    "                period_id=period_id\n",
+    "            )\n",
+    "\n",
+    "            if df is not None and not df.empty:\n",
+    "                print(f\"Success with {crypto}/{quote} on {exchange}!\")\n",
+    "                print(f\"Total records: {len(df)}\")\n",
+    "                print(f\"Date range: {df.index.min()} to {df.index.max()}\")\n",
+    "                return df\n",
+    "\n",
+    "    print(f\"Failed to retrieve data for {crypto} from any exchange or quote currency.\")\n",
+    "\n",
+    "    return None"
+   ],
+   "outputs": [],
+   "execution_count": 5
+  },
+  {
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    },
+    "ExecuteTime": {
+     "start_time": "2025-03-01T21:58:24.441669Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Fetch BCH data with 1-hour candles for 1 day\n",
+    "btc_hourly = fetch_with_fallbacks(\n",
+    "        crypto=\"BTC\",\n",
+    "        start_date=\"2025-02-24T00:00:00\",\n",
+    "        end_date=\"2025-02-25T00:00:00\",\n",
+    "        period_id=\"1HRS\")\n",
+    "btc_hourly.head()"
+   ],
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": ""
   },
   {
    "cell_type": "markdown",
