added coinapi documentation data to qts nb

--- a/QTS_Draft_Notebook.ipynb
+++ b/QTS_Draft_Notebook.ipynb
@@ -96,8 +96,8 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "*Coin API*\n",
     "\n",
@@ -433,13 +433,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-03-01T21:49:30.863511Z",
      "start_time": "2025-03-01T21:49:30.849670Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "import requests\n",
     "import pandas as pd\n",
@@ -459,29 +461,7 @@
     "    end_date=\"2025-02-25T00:00:00\",\n",
     "    period_id=\"1DAY\"\n",
     "):\n",
-    "    \"\"\"\n",
-    "    Fetch cryptocurrency historical OHLCV data from CoinAPI.\n",
     "\n",
-    "    Parameters:\n",
-    "    -----------\n",
-    "    crypto : str\n",
-    "        The cryptocurrency symbol (e.g., 'BTC', 'ETH', 'SOL')\n",
-    "    quote_currency : str\n",
-    "        The quote currency (e.g., 'USDT', 'USD', 'BUSD')\n",
-    "    exchange : str\n",
-    "        The exchange to fetch data from (e.g., 'BINANCE', 'COINBASE', 'KRAKEN')\n",
-    "    start_date : str\n",
-    "        Start date in ISO format (YYYY-MM-DDTHH:MM:SS)\n",
-    "    end_date : str\n",
-    "        End date in ISO format (YYYY-MM-DDTHH:MM:SS)\n",
-    "    period_id : str\n",
-    "        Time period of the candles (e.g., '1DAY', '1HRS', '15MIN')\n",
-    "\n",
-    "    Returns:\n",
-    "    --------\n",
-    "    pandas.DataFrame or None\n",
-    "        DataFrame containing the OHLCV data, or None if data retrieval failed\n",
-    "    \"\"\"\n",
     "    # Construct the symbol ID based on the parameters\n",
     "    symbol = f\"{exchange}_SPOT_{crypto}_{quote_currency}\"\n",
     "\n",
@@ -643,36 +623,43 @@
     "    print(f\"Failed to retrieve data for {crypto} from any exchange or quote currency.\")\n",
     "\n",
     "    return None"
-   ],
-   "outputs": [],
-   "execution_count": 5
+   ]
   },
   {
-   "metadata": {
-    "jupyter": {
-     "is_executing": true
-    },
-    "ExecuteTime": {
-     "start_time": "2025-03-01T21:58:24.441669Z"
-    }
-   },
    "cell_type": "code",
-   "source": [
-    "# Fetch BCH data with 1-hour candles for 1 day\n",
-    "btc_hourly = fetch_with_fallbacks(\n",
-    "        crypto=\"BTC\",\n",
-    "        start_date=\"2025-02-24T00:00:00\",\n",
-    "        end_date=\"2025-02-25T00:00:00\",\n",
-    "        period_id=\"1HRS\")\n",
-    "btc_hourly.head()"
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fetching ARB/USDT data from BINANCE with 1HRS candles\n",
+      "Symbol ID: BINANCE_SPOT_ARB_USDT\n",
+      "Date range: 2023-01-01 to 2025-02-25\n",
+      "Retrieved 8015 records\n",
+      "Retrieved 8863 records\n",
+      "No more data available\n",
+      "Success with ARB/USDT on BINANCE!\n",
+      "Total records: 16878\n",
+      "Date range: 2023-03-23 15:00:00+00:00 to 2025-02-24 23:00:00+00:00\n"
+     ]
+    }
    ],
-   "outputs": [],
-   "execution_count": null
+   "source": [
+    "# Fetch Arbitrum data with 1-hour candles for 1 day\n",
+    "\n",
+    "arbitrum_hourly = fetch_with_fallbacks(\"ARB\", \n",
+    "    period_id = \"1HRS\", \n",
+    "    start_date=\"2023-01-01\", \n",
+    "    end_date=\"2025-02-25\"\n",
+    "    )"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": ""
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
