--- a/Draft_Submission/QTS_Draft_Notebook.ipynb
+++ b/Draft_Submission/QTS_Draft_Notebook.ipynb
@@ -654,7 +654,7 @@
     "    all_data = []\n",
     "    max_retries = 5\n",
     "\n",
-    "    # print(f\"Fetching {crypto}/{quote_currency} data from {exchange} with {period_id} candles\")\n",
+    "    # print(f\"Fetching {crypto}/{quote_currency} Data from {exchange} with {period_id} candles\")\n",
     "    # print(f\"Symbol ID: {symbol}\")\n",
     "    # print(f\"Date range: {start_date} to {end_date}\")\n",
     "\n",
@@ -721,12 +721,12 @@
     "            print(\"Error:\", data[\"error\"])\n",
     "            break\n",
     "\n",
-    "        # Empty data check\n",
+    "        # Empty Data check\n",
     "        if not data:\n",
-    "            print(\"No more data available\")\n",
+    "            print(\"No more Data available\")\n",
     "            break\n",
     "\n",
-    "        # Successfully got data\n",
+    "        # Successfully got Data\n",
     "        df = pd.DataFrame(data)\n",
     "        all_data.append(df)\n",
     "\n",
@@ -795,7 +795,7 @@
     "                print(f\"Date range: {df.index.min()} to {df.index.max()}\")\n",
     "                return df\n",
     "\n",
-    "    print(f\"Failed to retrieve data for {crypto} from any exchange or quote currency.\")\n",
+    "    print(f\"Failed to retrieve Data for {crypto} from any exchange or quote currency.\")\n",
     "\n",
     "    return None"
    ]
@@ -822,7 +822,7 @@
     }
    ],
    "source": [
-    "# Fetch Arbitrum data with 1-hour candles for 1 day\n",
+    "# Fetch Arbitrum Data with 1-hour candles for 1 day\n",
     "\n",
     "arbitrum_hourly = fetch_with_fallbacks(\"ARB\", \n",
     "    period_id = \"1HRS\", \n",
@@ -851,7 +851,7 @@
     "\n",
     "def clean_data(data, price_data=None, on_chain_data=None, set_index=True):\n",
     "    if price_data and on_chain_data:\n",
-    "        raise ValueError('Invalid Parameter Values: Both price_data or on_chain data cannot be True')\n",
+    "        raise ValueError('Invalid Parameter Values: Both price_data or on_chain Data cannot be True')\n",
     "    elif price_data:\n",
     "        prices = data.copy()\n",
     "        if prices.isna().any().any():\n",
@@ -881,7 +881,7 @@
     "            metrics.index = pd.to_datetime(metrics.index)\n",
     "        return metrics\n",
     "    else:\n",
-    "        raise ValueError('Invalid Parameter Values: price_data or on_chain data must be True')\n",
+    "        raise ValueError('Invalid Parameter Values: price_data or on_chain Data must be True')\n",
     "\n",
     "def check_missing_hours(df):\n",
     "    \"\"\"\n",
@@ -1092,7 +1092,7 @@
     }
    ],
    "source": [
-    "# Bitcoin on-chain data from Dune\n",
+    "# Bitcoin on-chain Data from Dune\n",
     "\n",
     "btc = pd.read_parquet('BTC_Hourly_On_Chain_Data_sorted.parquet')\n",
     "btc.head()"
@@ -1289,7 +1289,7 @@
     }
    ],
    "source": [
-    "# We must shift the BTC data by 1, since we don't know that information until then\n",
+    "# We must shift the BTC Data by 1, since we don't know that information until then\n",
     "\n",
     "btc['hour'] = pd.to_datetime(btc['hour'])\n",
     "btc = btc.set_index('hour')\n",
@@ -1298,8 +1298,8 @@
     "display(btc.head())\n",
     "init_num_missing_hours = len(check_missing_hours(btc))\n",
     "num_nils_btc = np.where(btc == '<nil>', 1, 0).sum()\n",
-    "print(f'Number of Nils in raw btc on-chain data: {num_nils_btc}')\n",
-    "print(f'Number of missing hours in the raw BTC on-chain data: {init_num_missing_hours}')"
+    "print(f'Number of Nils in raw btc on-chain Data: {num_nils_btc}')\n",
+    "print(f'Number of missing hours in the raw BTC on-chain Data: {init_num_missing_hours}')"
    ]
   },
   {
@@ -1475,7 +1475,7 @@
     "btc_chain_processed = preprocess_data(data=btc, on_chain_data=True, set_index=False)\n",
     "display(btc_chain_processed.head())\n",
     "num_missing_hours = len(check_missing_hours(btc_chain_processed))\n",
-    "print(f'Number of missing hours in the processed BTC on-chain data: {num_missing_hours}')"
+    "print(f'Number of missing hours in the processed BTC on-chain Data: {num_missing_hours}')"
    ]
   },
   {
@@ -1632,15 +1632,15 @@
     }
    ],
    "source": [
-    "# Bitcoin price data from CoinAPI\n",
+    "# Bitcoin price Data from CoinAPI\n",
     "\n",
     "btc_price = pd.read_csv('btc_hourly.csv').sort_values('time_period_end').set_index('time_period_end')\n",
     "btc_price.index = pd.to_datetime(btc_price.index)\n",
     "display(btc_price.head())\n",
     "num_nans_btc_price = btc.isna().sum().sum()\n",
-    "print(f'Number of NaNs in raw btc price data: {num_nans_btc_price}')\n",
+    "print(f'Number of NaNs in raw btc price Data: {num_nans_btc_price}')\n",
     "init_num_missing_hours_price = len(check_missing_hours(btc_price))\n",
-    "print(f'Number of missing hours in the raw BTC price data: {init_num_missing_hours_price}')"
+    "print(f'Number of missing hours in the raw BTC price Data: {init_num_missing_hours_price}')"
    ]
   },
   {
@@ -1777,7 +1777,7 @@
     "btc_price_processed = preprocess_data(data=btc_price, price_data=True, set_index=False)\n",
     "display(btc_price_processed.head())\n",
     "num_missing_hours_price = len(check_missing_hours(btc_price_processed))\n",
-    "print(f'Number of missing hours in the processed BTC price data: {num_missing_hours_price}')"
+    "print(f'Number of missing hours in the processed BTC price Data: {num_missing_hours_price}')"
    ]
   },
   {
