--- a/Drafts/QTS_Project (1).ipynb
+++ b/Drafts/QTS_Project (1).ipynb
@@ -821,7 +821,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ^ Final data. 2015-2024. For taking averages, we can only include numeric datatypes. If we want to include these other columns (such as bits)\n",
+    "# ^ Final Data. 2015-2024. For taking averages, we can only include numeric datatypes. If we want to include these other columns (such as bits)\n",
     "# we first need to convert them to numeric and take an average\n",
     "\n",
     "# Query used to generate this:\n",
