--- a/Final_Project/data_pitch.ipynb
+++ b/Final_Project/data_pitch.ipynb
@@ -26,7 +26,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "We’ve confirmed that [StakingRewards.com](https://www.stakingrewards.com/) is the *only* provider consolidating the following metrics **at an hourly granularity** at any reasonable price for multiple major Proof of Stake (PoS) networks—including **ETH, TRON, ARBITRUM, MATIC, AVALANCHE, and SOL**:"
+   "source": [
+    "We’ve confirmed that [StakingRewards.com](https://www.stakingrewards.com/) is the *only* provider consolidating the following metrics **at an hourly granularity** at any reasonable price for multiple major Proof of Stake (PoS) networks—including **ETH, TRON, ARBITRUM, MATIC, AVALANCHE, and SOL**:"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -36,8 +38,8 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "1. **Curriculum Enhancement**\n",
     "   - Incorporating live on-chain metrics in coursework provides practical, cutting-edge training.\n",
@@ -47,7 +49,7 @@
     "   - Working with real metrics from leading PoS networks boosts students’ employability, especially as the demand for crypto-fluent quants grows.\n",
     "\n",
     "3. **Research Outcomes**\n",
-    "   - Advanced staking metrics can lead to publishable findings and innovative quant models, directly impacting the quality and recognition of our group’s work.\n",
+    "   - Advanced staking metrics can lead to publishable findings and innovative quant models, directly impacting the quality and recognition of our program’s work.\n",
     "\n",
     "4. **Future Proofing**\n",
     "   - As crypto adoption accelerates, **on-chain staking data** is becoming a standard for deeper analysis and alpha generation.\n",
@@ -57,8 +59,8 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "\n",
     "\n",
@@ -71,13 +73,15 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "## (5) Conclusion"
+   "metadata": {},
+   "source": [
+    "## (5) Conclusion"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Purchasing the **Advanced Plan for one month** from StakingRewards.com is a **strategic investment** for:\n",
     "\n",
@@ -89,8 +93,8 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## (6) Access to Unique, Hard-to-Find Data\n",
     "\n",
