--- a/tech.ipynb
+++ b/tech.ipynb
@@ -92,6 +92,54 @@
     "    filepath = f'Data/price_data/processed/{coin}_processed_data.parquet'\n",
     "    df = pd.read_parquet(filepath)"
    ]
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-04T21:01:26.442703Z",
+     "start_time": "2025-03-04T21:01:26.436997Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from datetime import timedelta\n",
+    "\n",
+    "\n",
+    "def fib_ratio(window, df):\n",
+    "    fib_ratios = [0.236, 0.382, 0.5, 0.618, 0.786]\n",
+    "    fib_data = []\n",
+    "    prices = df['price_close']\n",
+    "    df.index = pd.to_datetime(df.index)\n",
+    "\n",
+    "    for time in df.index[window:]:\n",
+    "        try:\n",
+    "            swing_high = df.loc[time - timedelta(days=window):time, 'price_close'].max()\n",
+    "            swing_low = df.loc[time - timedelta(days=window):time, 'price_close'].min()\n",
+    "\n",
+    "            price_diff = swing_high - swing_low\n",
+    "            levels = [swing_high - ratio * price_diff for ratio in fib_ratios]\n",
+    "\n",
+    "            fib_data.append([time] + levels)\n",
+    "\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error processing {time}: {e}\")\n",
+    "            continue\n",
+    "\n",
+    "    columns = ['time_close'] + [f'fib_{int(ratio * 100)}' for ratio in fib_ratios]\n",
+    "    fib_df = pd.DataFrame(fib_data, columns=columns)\n",
+    "    fib_df = fib_df.merge(prices, on='time_close', how='left')\n",
+    "\n",
+    "    return fib_df"
+   ],
+   "outputs": [],
+   "execution_count": 2
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": ""
   }
  ],
  "metadata": {
