--- a/tech_indicator_computation/tech.ipynb
+++ b/tech_indicator_computation/tech.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,19 +37,15 @@
     "    df.drop(columns=['price_close_prev', 'U', 'D'], inplace=True)\n",
     "\n",
     "def time():\n",
-    "    df['time_period_end'] = pd.to_datetime(df['time_period_end'])\n",
-    "    df['Hour'] = df['time_period_end'].dt.hour\n",
-    "    df['Day of Week'] = df['time_period_end'].dt.weekday + 1  # Monday=1, Sunday=7\n",
-    "    df['Month'] = df['time_period_end'].dt.month\n",
+    "    df['Hour'] = df.index.hour\n",
+    "    df['Day of Week'] = df.index.weekday + 1  # Monday=1, Sunday=7\n",
+    "    df['Month'] = df.index.month\n",
     "\n",
     "from datetime import timedelta\n",
     "\n",
     "def fib_ratio(window, df):\n",
     "    fib_ratios = [0.236, 0.382, 0.5, 0.618, 0.786]\n",
     "    fib_data = []\n",
-    "    \n",
-    "    df.set_index('time_period_end', inplace=True)\n",
-    "    df.index = pd.to_datetime(df.index)\n",
     "\n",
     "    for time in df.index[window:]:\n",
     "        try:\n",
@@ -67,20 +63,21 @@
     "\n",
     "    columns = ['time_period_end'] + [f'fib_{int(ratio * 100)}' for ratio in fib_ratios]\n",
     "    fib_df = pd.DataFrame(fib_data, columns=columns)\n",
-    "    fib_df = fib_df.merge(df, on='time_period_end', how='left')\n",
+    "    fib_df.set_index('time_period_end', inplace=True)\n",
+    "    fib_df = fib_df.merge(df, how='left', left_index=True, right_index=True)\n",
     "\n",
     "    return fib_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "coins = set(['arb', 'aval', 'bnb', 'btc', 'eth', 'matic', 'sol', 'tron'])\n",
+    "coins = set(['arb', 'avax', 'btc', 'eth', 'matic', 'sol', 'tron'])\n",
     "for coin in coins:\n",
-    "    filepath = f'../Data/price_data/processed/{coin}_processed_data.parquet'\n",
+    "    filepath = f'../Crypto_QTS_Data_Processed/{coin}_price_processed.parquet'\n",
     "    df = pd.read_parquet(filepath)\n",
     "    n = 24\n",
     "    bollinger(n)\n",
