segmented_tech_data

--- a/tech_indicator_computation/tech.ipynb
+++ b/tech_indicator_computation/tech.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,21 +71,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "coins = set(['arb', 'avax', 'btc', 'eth', 'matic', 'sol', 'tron'])\n",
     "for coin in coins:\n",
-    "    filepath = f'../Crypto_QTS_Data_Processed/{coin}_price_processed.parquet'\n",
+    "    filepath = f'../Data/data_segmented/{coin}_data.parquet'\n",
     "    df = pd.read_parquet(filepath)\n",
+    "    df.set_index('index', inplace=True)\n",
+    "    df = df.iloc[1:]\n",
     "    n = 24\n",
     "    bollinger(n)\n",
     "    EMA(20, 50)\n",
     "    RSI(n)\n",
     "    time()\n",
     "    df = fib_ratio(n, df)\n",
-    "    outpath = f'../Data/price_data_tech/processed/{coin}_processed_data.parquet'\n",
+    "    outpath = f'../Data/data_segmented_tech/{coin}_data.parquet'\n",
     "    df.to_parquet(outpath, engine=\"pyarrow\", index=False)"
    ]
   }
