data_segmented_tech_again
now with technical indicators done on normalized price

--- a/tech_indicator_computation/tech.ipynb
+++ b/tech_indicator_computation/tech.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,26 +13,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "def bollinger(n):\n",
-    "    df['SMA'] = df['price_close'].rolling(n).mean()\n",
-    "    df['stdev'] = df['price_close'].rolling(n).std()\n",
-    "    df['bollinger'] = (df['price_close'] - df['SMA']) / df['stdev']\n",
+    "    df['SMA'] = df['normalized_price'].rolling(n).mean()\n",
+    "    df['stdev'] = df['normalized_price'].rolling(n).std()\n",
+    "    df['bollinger'] = (df['normalized_price'] - df['SMA']) / df['stdev']\n",
     "    df.drop(columns=['SMA', 'stdev'], inplace=True)\n",
     "\n",
     "def EMA(n1, n2):\n",
-    "    df['EMA1'] = df['price_close'].ewm(span=n1, adjust=False).mean()\n",
-    "    df['EMA2'] = df['price_close'].ewm(span=n2, adjust=False).mean()\n",
+    "    df['EMA1'] = df['normalized_price'].ewm(span=n1, adjust=False).mean()\n",
+    "    df['EMA2'] = df['normalized_price'].ewm(span=n2, adjust=False).mean()\n",
     "    df['EMAcross'] = df['EMA1'] - df['EMA2']\n",
     "    df.drop(columns=['EMA1', 'EMA2'], inplace=True)\n",
     "\n",
     "def RSI(n):\n",
-    "    df['price_close_prev'] = df['price_close'].shift()\n",
-    "    df['U'] = (df['price_close'] - df['price_close_prev']).clip(lower=0)\n",
-    "    df['D'] = (df['price_close_prev'] - df['price_close']).clip(lower=0)\n",
+    "    df['price_close_prev'] = df['normalized_price'].shift()\n",
+    "    df['U'] = (df['normalized_price'] - df['price_close_prev']).clip(lower=0)\n",
+    "    df['D'] = (df['price_close_prev'] - df['normalized_price']).clip(lower=0)\n",
     "    df['RSI'] = df['U'].rolling(n).mean() / (df['D'].rolling(n).mean() + df['U'].rolling(n).mean())\n",
     "    df.drop(columns=['price_close_prev', 'U', 'D'], inplace=True)\n",
     "\n",
@@ -49,8 +49,8 @@
     "\n",
     "    for time in df.index[window:]:\n",
     "        try:\n",
-    "            swing_high = df.loc[time - timedelta(days=window):time, 'price_close'].max()\n",
-    "            swing_low = df.loc[time - timedelta(days=window):time, 'price_close'].min()\n",
+    "            swing_high = df.loc[time - timedelta(days=window):time, 'normalized_price'].max()\n",
+    "            swing_low = df.loc[time - timedelta(days=window):time, 'normalized_price'].min()\n",
     "\n",
     "            price_diff = swing_high - swing_low\n",
     "            levels = [swing_high - ratio * price_diff for ratio in fib_ratios]\n",
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
