Pushing the do not push again

--- a/Do_Not_Push_This/MLP_Practice.ipynb
+++ b/Do_Not_Push_This/MLP_Practice.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.2.0\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -16,7 +24,11 @@
     "from tensorflow.keras.utils import to_categorical\n",
     "from tensorflow.keras.callbacks import EarlyStopping\n",
     "from sklearn.model_selection import TimeSeriesSplit\n",
-    "import tensorflow as tf"
+    "import tensorflow as tf\n",
+    "from arch.univariate import ConstantMean, GARCH, Normal\n",
+    "\n",
+    "import arch\n",
+    "print(arch.__version__)"
    ]
   },
   {
@@ -105,11 +117,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'ConstantMean' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[83], line 76\u001b[0m\n\u001b[0;32m     73\u001b[0m asset_returns_series \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mSeries(asset_returns_arr)\n\u001b[0;32m     75\u001b[0m \u001b[38;5;66;03m# Estimate the effective lambda using DCC.\u001b[39;00m\n\u001b[1;32m---> 76\u001b[0m lambda_est, dcc_result \u001b[38;5;241m=\u001b[39m estimate_dcc_lambda(raw_signal_series, asset_returns_series)\n\u001b[0;32m     77\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEstimated lambda (decay factor) from DCC:\u001b[39m\u001b[38;5;124m\"\u001b[39m, lambda_est)\n\u001b[0;32m     79\u001b[0m \u001b[38;5;66;03m# =============================================================================\u001b[39;00m\n\u001b[0;32m     80\u001b[0m \u001b[38;5;66;03m# Now define a get_signal function that uses EWMA with the estimated lambda.\u001b[39;00m\n\u001b[0;32m     81\u001b[0m \u001b[38;5;66;03m# In pandas.ewm, you can specify the decay via the 'alpha' parameter.\u001b[39;00m\n\u001b[0;32m     82\u001b[0m \u001b[38;5;66;03m# One common relationship is to set: alpha = lambda_est.\u001b[39;00m\n\u001b[0;32m     83\u001b[0m \u001b[38;5;66;03m# (Alternatively, you might use alpha = 1 - lambda_est depending on your convention.)\u001b[39;00m\n\u001b[0;32m     84\u001b[0m \u001b[38;5;66;03m# =============================================================================\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[83], line 27\u001b[0m, in \u001b[0;36mestimate_dcc_lambda\u001b[1;34m(raw_signal, asset_returns)\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m     16\u001b[0m \u001b[38;5;124;03mEstimate the effective decay factor (lambda) for EWMA smoothing by fitting a DCC model.\u001b[39;00m\n\u001b[0;32m     17\u001b[0m \u001b[38;5;124;03m\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[38;5;124;03m    dcc_result: The fitted DCC model result (for inspection if needed).\u001b[39;00m\n\u001b[0;32m     25\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m     26\u001b[0m \u001b[38;5;66;03m# Fit a univariate GARCH(1,1) model to the raw_signal.\u001b[39;00m\n\u001b[1;32m---> 27\u001b[0m am_signal \u001b[38;5;241m=\u001b[39m ConstantMean(raw_signal)\n\u001b[0;32m     28\u001b[0m am_signal\u001b[38;5;241m.\u001b[39mvolatility \u001b[38;5;241m=\u001b[39m GARCH(\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m     29\u001b[0m am_signal\u001b[38;5;241m.\u001b[39mdistribution \u001b[38;5;241m=\u001b[39m Normal()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'ConstantMean' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "data['price_diff'] = data['price_close'].diff()\n",
+    "\"\"\"data['price_diff'] = data['price_close'].diff()\n",
     "threshold = data['price_diff'].std()\n",
     "\n",
     "def get_signal(diff, threshold):\n",
@@ -120,7 +145,112 @@
     "    else:\n",
     "        return 'Hold'\n",
     "\n",
-    "data['Signal'] = data['price_diff'].apply(lambda x: get_signal(x, threshold))"
+    "data['Signal'] = data['price_diff'].apply(lambda x: get_signal(x, threshold))\"\"\"\n",
+    "\n",
+    "def estimate_dcc_lambda(raw_signal, asset_returns):\n",
+    "    \"\"\"\n",
+    "    Estimate the effective decay factor (lambda) for EWMA smoothing by fitting a DCC model.\n",
+    "    \n",
+    "    Parameters:\n",
+    "        raw_signal (pd.Series): The raw trading signal (e.g., long probability minus short probability).\n",
+    "        asset_returns (pd.Series): The asset returns series.\n",
+    "        \n",
+    "    Returns:\n",
+    "        lambda_est (float): The effective decay parameter estimated as a + b.\n",
+    "        dcc_result: The fitted DCC model result (for inspection if needed).\n",
+    "    \"\"\"\n",
+    "    # Fit a univariate GARCH(1,1) model to the raw_signal.\n",
+    "    am_signal = ConstantMean(raw_signal)\n",
+    "    am_signal.volatility = GARCH(1, 0, 1)\n",
+    "    am_signal.distribution = Normal()\n",
+    "    res_signal = am_signal.fit(disp='off')\n",
+    "    \n",
+    "    # Fit a univariate GARCH(1,1) model to the asset_returns.\n",
+    "    am_returns = ConstantMean(asset_returns)\n",
+    "    am_returns.volatility = GARCH(1, 0, 1)\n",
+    "    am_returns.distribution = Normal()\n",
+    "    res_returns = am_returns.fit(disp='off')\n",
+    "    \n",
+    "    # Combine the standardized residuals from both models.\n",
+    "    std_resid = pd.concat([res_signal.std_resid, res_returns.std_resid], axis=1)\n",
+    "    std_resid.columns = ['signal', 'returns']\n",
+    "    \n",
+    "    # Fit the DCC model on the two series.\n",
+    "    dcc = DynamicConditionalCorrelation(std_resid)\n",
+    "    dcc_result = dcc.fit()\n",
+    "    \n",
+    "    # Extract the DCC parameters.\n",
+    "    # The DCC model typically estimates parameters 'a' and 'b' for the updating equation:\n",
+    "    # Q_t = (1 - a - b) * Q_bar + a * (e_{t-1}e_{t-1}') + b * Q_{t-1}\n",
+    "    a = dcc_result.params['a']\n",
+    "    b = dcc_result.params['b']\n",
+    "    lambda_est = a + b\n",
+    "    return lambda_est, dcc_result\n",
+    "\n",
+    "# =============================================================================\n",
+    "# Example usage:\n",
+    "# Assume you have already computed:\n",
+    "#   y_pred  -> the model's predicted probabilities (shape: n_samples x 3)\n",
+    "#   asset_returns -> a numpy array of asset returns corresponding to your test period.\n",
+    "#\n",
+    "# For the raw signal, we assume:\n",
+    "#   raw_signal = y_pred[:, 0] - y_pred[:, 2]\n",
+    "# =============================================================================\n",
+    "\n",
+    "# (Here, replace these with your actual arrays.)\n",
+    "# For demonstration, we'll create dummy data:\n",
+    "np.random.seed(42)\n",
+    "n_samples = 500\n",
+    "raw_signal_arr = np.random.randn(n_samples)  # This would be your raw signal\n",
+    "asset_returns_arr = np.random.randn(n_samples) * 0.01  # Simulated asset returns\n",
+    "\n",
+    "# Convert to pandas Series (ensure they have a datetime index if needed).\n",
+    "raw_signal_series = pd.Series(raw_signal_arr)\n",
+    "asset_returns_series = pd.Series(asset_returns_arr)\n",
+    "\n",
+    "# Estimate the effective lambda using DCC.\n",
+    "lambda_est, dcc_result = estimate_dcc_lambda(raw_signal_series, asset_returns_series)\n",
+    "print(\"Estimated lambda (decay factor) from DCC:\", lambda_est)\n",
+    "\n",
+    "# =============================================================================\n",
+    "# Now define a get_signal function that uses EWMA with the estimated lambda.\n",
+    "# In pandas.ewm, you can specify the decay via the 'alpha' parameter.\n",
+    "# One common relationship is to set: alpha = lambda_est.\n",
+    "# (Alternatively, you might use alpha = 1 - lambda_est depending on your convention.)\n",
+    "# =============================================================================\n",
+    "\n",
+    "def get_signal(y_pred, alpha):\n",
+    "    \"\"\"\n",
+    "    Compute the EWMA-smoothed trading signal.\n",
+    "    \n",
+    "    Parameters:\n",
+    "        y_pred (np.ndarray): Array of shape (n_samples, n_classes) with predicted probabilities.\n",
+    "                             Assumes column 0 is long and column 2 is short.\n",
+    "        alpha (float): The EWMA smoothing parameter.\n",
+    "        \n",
+    "    Returns:\n",
+    "        np.ndarray: Smoothed signal.\n",
+    "    \"\"\"\n",
+    "    # Compute raw signal.\n",
+    "    raw_signal = y_pred[:, 0] - y_pred[:, 2]\n",
+    "    # Smooth using EWMA.\n",
+    "    signal_series = pd.Series(raw_signal)\n",
+    "    smoothed_signal = signal_series.ewm(alpha=alpha, adjust=False).mean().values\n",
+    "    return smoothed_signal\n",
+    "\n",
+    "# =============================================================================\n",
+    "# Example: using the get_signal function with the estimated lambda.\n",
+    "# (In practice, replace y_pred_example with your model's predictions.)\n",
+    "# =============================================================================\n",
+    "\n",
+    "# Dummy predicted probabilities for demonstration.\n",
+    "y_pred_example = np.random.rand(n_samples, 3)\n",
+    "# Normalize to sum to one.\n",
+    "y_pred_example = y_pred_example / y_pred_example.sum(axis=1, keepdims=True)\n",
+    "\n",
+    "smoothed_signal = get_signal(y_pred_example, alpha=lambda_est)\n",
+    "print(\"First 10 values of the smoothed signal using EWMA with estimated lambda:\")\n",
+    "print(smoothed_signal[:10])\n"
    ]
   },
   {
